modification de l'arrière plan

--- a/accueil.css
+++ b/accueil.css
@@ -7,10 +7,12 @@ body{
     background-position: center;
    }
    .z1{
+    background-color: rgba(228, 150, 90, 0.8);
      border-radius: 25px;
      margin:auto;
-     height:4.5em;
-     width:100em;
+     height: auto;
+     width: 50em;
+     float: center;
    }
    
    .textepresentation{
@@ -22,148 +24,4 @@ body{
      font-family: 'OnePlus Slate', sans-serif;
    }
    
-   /* Affichage des caroussels*/
-   #caroussel {
-     width: 21%;
-     overflow: hidden;
-     border: 3px solid white;
-     height: 300px;
-     margin-right: 5%;
-     margin-left: 14%;
-     margin-top: 5%;
-     float: left;
-   }
-   
-   #caroussel2 {
-     width: 21%;
-     margin-top: 5%;
-     overflow: hidden;
-     border: 3px solid white;
-     height: 300px;
-   }
-   
-   #imgAffiche {
-     width: 22%;
-     margin-right: 5%;
-     float: left;
-   }
-   
-   #imgRes1 {
-     width: 1%;
-   }
-   
-   .imagesCaroussel {
-     display: flex;
-     animation-duration: 20s;
-     animation-name: mesImages;
-     animation-iteration-count: infinite;
-   }
-   
-   .imagesCaroussel img {
-     max-width: 100%; /* Redimensionne l'image pour qu'elle ne dépasse pas la largeur du conteneur */
-     max-height: 100%; /* Redimensionne l'image pour qu'elle ne dépasse pas la hauteur du conteneur */
-   }
-   
-   @keyframes mesImages {
-     0% {
-       transform: translateX(0);
-     }
-     25% {
-       transform: translateX(-100%);
-     }
-     50% {
-       transform: translateX(-200%);
-     }
-     75% {
-       transform: translateX(-300%);
-     }
-     100% {
-       transform: translateX(0);
-     }
-   }
-   
-   /* Pour les écrans de taille maximale de 768px */
-   @media (max-width: 1300px) {
-     #caroussel {
-       height: 200px;
-     }
-     .textepresentation {
-       font-size: 2em;
-     }
-     .z1 {
-       width: 30em;
-       height:3em;
-     }
-   }
-   
-   /* Pour les écrans de taille maximale de 480px */
-   @media (max-width: 1000px) {
-     #caroussel {
-       height: 70px;
-     }
-     .textepresentation {
-       font-size: 1em;
-     }
-     .z1 {
-       width: 20em;
-       height:1.5em;
-     }
-   }
-   
-   /* Pour les écrans de taille maximale de 200px */
-   @media (max-width: 200px) {
-     #caroussel {
-       height: 100px;
-     }
-     .textepresentation {
-       font-size: 0.5em;
-       height:1em;
-     }
-     z1 {
-       width: 10em;
-     }
-   }
-   
-   /* Pour les écrans de taille maximale de 768px */
-   @media (max-width: 1300px) {
-     #caroussel2 {
-       height: 200px;
-     }
-   }
-   
-   /* Pour les écrans de taille maximale de 480px */
-   @media (max-width: 1000px) {
-     #caroussel2 {
-       height: 70px;
-     }
-   }
-   
-   /* Pour les écrans de taille maximale de 200px */
-   @media (max-width: 200px) {
-     #caroussel2 {
-       height: 100px;
-     }
-   }
-   
-   /* Pour les écrans de taille maximale de 768px */
-   @media (max-width: 1300px) {
-     #caroussel3 {
-       height: 200px;
-     }
-   }
-   
-   /* Pour les écrans de taille maximale de 480px */
-   @media (max-width: 1000px) {
-     #caroussel3 {
-       height: 70px;
-     }
-   }
-   
-   /* Pour les écrans de taille maximale de 200px */
-   @media (max-width: 200px) {
-     #caroussel3 {
-       height: 100px;
-     }
-   }
-   
-   
+  
