--- a/billetterie.css
+++ b/billetterie.css
@@ -1,11 +1,14 @@
-/* Fond d'écran */
+/* Fond vidéo */
 body {
-    background-image: url("images/parc-bagatelle.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    position: relative;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 }
+
 
 /* Container principal */
 .billetterie-container {
@@ -164,4 +167,17 @@ input[type="number"]:focus {
         width: 100%;
         max-width: 200px;
     }
+}
+
+/* Vidéo plein écran */
+#video-background {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    object-fit: cover;
 }
