--- a/admin.css
+++ b/admin.css
@@ -1,33 +1,51 @@
-/* Permet d'avoir une image en fond d'écran*/
-body{
-    background-image: url("images/parc-bagatelle.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover; /* Couvre la zone du site */
-    background-position: center;
-   }
-   .z1 {
-     background-color: rgba(228, 150, 90, 0.8);
-     border-radius: 25px;
-     margin: 1em 2em 0 0;
-     height: auto;
-     width: auto;
-     float: right;
-   }
+/* Fond vidéo */
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    position: relative;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Vidéo plein écran */
+#video-background {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    object-fit: cover;
+}
+
+.z1 {
+    background-color: rgba(228, 150, 90, 0.8);
+    border-radius: 25px;
+    margin: 1em 2em 0 auto;
+    height: auto;
+    width: auto;
+    position: relative;
+    right: 0;
+    float: right;
+}
+
+.textepresentation {
+    margin: 0;
+    text-align: right;
+    font-size: 2em;
+    color: #ffffff;
+    font-weight: bold;
+    font-family: 'OnePlus Slate', sans-serif;
+    padding: 10px;
+}
    
-   .textepresentation {
-     margin: 0;
-     text-align: right;
-     font-size: 2em;
-     color: #ffffff;
-     font-weight: bold;
-     font-family: 'OnePlus Slate', sans-serif;
-     padding: 10px;
-   }
    
    
    
-  
    
    
    
