modification de la base de donnée + ajout de la possibilité pour l'utilisateur de s'inscrire

--- a/contact.css
+++ b/contact.css
@@ -176,3 +176,25 @@ br {
     }
 }
 
+.messages {
+    width: 80%;
+    margin: 20px auto;
+}
+
+.error-message {
+    background-color: rgba(255, 0, 0, 0.1);
+    border: 1px solid #ff0000;
+    color: #ff0000;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+}
+
+.success-message {
+    background-color: rgba(0, 255, 0, 0.1);
+    border: 1px solid #00ff00;
+    color: #008000;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+}
